--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,1 +1,9 @@
-@import 'setup';
+@import '_setup';
+@import '_variables';
+@import '_mixins';
+@import '_main';
+@import '_header';
+@import '_about';
+@import '_services';
+@import '_portfolio';
+@import '_footer';
