finsihed styling, responsive, added some images

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,9 +1,11 @@
-@import '_setup';
-@import '_variables';
-@import '_mixins';
-@import '_main';
-@import '_header';
-@import '_about';
-@import '_services';
-@import '_portfolio';
-@import '_footer';
+@import 'partials/_setup';
+@import 'partials/_variables';
+@import 'partials/_mixins';
+@import 'partials/_main';
+@import 'partials/_header';
+@import 'partials/_tabs';
+@import 'partials/_about';
+@import 'partials/_services';
+@import 'partials/_portfolio';
+@import 'partials/_footer';
+@import 'partials/_responsive';
