--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -19,7 +19,7 @@ $fontColour: #888888;
 $fontColourDark: #434343;
 
 // Gradients
-$headerGradient: linear-gradient(0deg, #59695C, rgba(0,0,0,0));
+$headerGradient: linear-gradient(0deg, rgba(89,105,92,0.5), rgba(79,95,82,0.1));
 
 // Buttons
 $buttonColorHeader: $brandPrimary;
