--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -24,7 +24,7 @@ $headerGradient: linear-gradient(0deg, rgba(89,105,92,0.5), rgba(79,95,82,0.1));
 // Buttons
 $buttonColorHeader: $brandPrimary;
 $buttonColor: #4C4C4C;
-$buttonColorFooter: #2F2F2F;
+$buttonColorHover: #2F2F2F;
 
 //======================================
 //=              LAYOUT                =
