--- a/src/assets/styles/partials/_header.scss
+++ b/src/assets/styles/partials/_header.scss
@@ -2,6 +2,7 @@ header {
     @include flexCenter();
     width: $full;
     background: $headerGradient;
+    padding: 0 2rem;
 }
 
 header:before {
@@ -13,27 +14,32 @@ header:before {
     left: 0;
     background: url('../images/desk.jpg');
     background-size: cover;
+    background-position: center center;
     z-index: -1;
 }
 
 header, header * {
     color: $fontColourLight;
     text-transform: uppercase;
+    min-height: 100%;
 }
 
 .headerWrapper {
-    height: 100vh;
+    margin-bottom: 0;
     justify-content: center;
+    text-align: center
 }
 
 .headerWrapper h1 {
     font-size: 4rem;
     margin-top: 0;
     letter-spacing: 0.3rem;
+    line-height: 4rem;
 }
 
 .headerWrapper h3 {
     font-size: 1.6rem;
+    line-height: 1.8rem;
     margin-bottom: 0;
     letter-spacing: 0.4rem;
     font-weight: 100;
