--- a/src/assets/styles/partials/_tabs.scss
+++ b/src/assets/styles/partials/_tabs.scss
@@ -6,8 +6,8 @@
     float: left;
     list-style: none;
     margin: 0;
-    padding: 1rem;
-    padding-top: 0rem;
+    padding: 0;
+    padding-bottom: 1rem;
 }
 
 .tabsList li {
@@ -26,7 +26,7 @@
     margin: 0.5rem 0;
     padding: 0.5rem 0.5rem 0.35rem;
     cursor: pointer;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .tabsList li a:link { border-color: #ccc; }
@@ -53,28 +53,17 @@
 
 .tabsList li.current a:focus { outline: 1px dotted #444; }
 
-// .tabsList a span {
-//     position: absolute;
-//     top: auto;
-//     width: 1px;
-//     height: 1px;
-//     overflow: hidden;
-//     opacity: 0;
-// }
-
 .tabPanelWrapper {
-    position: relative;  /*for z-index*/
+    position: relative;
     display: block;
     visibility: visible;
     clear: left;
     overflow: hidden;
     padding: 0 2rem;
-    // border: 2px solid #999;
     z-index: 5;
     color: #333;
-    // background-color: #fafafa;
     height: 20rem;
-    width: 500px;
+    width: 120%;
     margin: 0;
 }
 
@@ -99,3 +88,7 @@
 .tabPanel:focus { outline: 1px dotted #999; }
 
 .tabPanel p:focus { outline: 1px dotted #999; }
+
+.tabContent {
+    width: 300px;
+}
