--- a/src/assets/styles/partials/_portfolio.scss
+++ b/src/assets/styles/partials/_portfolio.scss
@@ -73,7 +73,7 @@
 .spaceRace {
     background: url("../images/space.jpg");
     background-size: cover;
-    background-position: right top;
+    background-position: center center;
 }
         
 .catchARide {
