--- a/src/assets/styles/partials/_responsive.scss
+++ b/src/assets/styles/partials/_responsive.scss
@@ -18,6 +18,11 @@
         padding: 2rem;
     }
 
+    .contentInner {
+        padding-right: 0;
+        width: 100%;
+    }
+
     .portfolioMiddle {
         justify-content: center;
     }
