Fixed email buttons

--- a/src/assets/styles/partials/_footer.scss
+++ b/src/assets/styles/partials/_footer.scss
@@ -8,6 +8,12 @@ footer {
 .socialMediaWrapper {
     @include ulReset();
     margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.socialMedia {
+    display: flex;
+    justify-content: center;
 }
 
 .socialMedia li {
