--- a/src/assets/styles/partials/_portfolio.scss
+++ b/src/assets/styles/partials/_portfolio.scss
@@ -22,7 +22,7 @@
     background: $brandSecondaryDark;
     margin-top: 20px;
     margin-right: 20px;
-    height: 400px;
+    height: 440px;
     display: flex;
     align-items: flex-end;
     position: relative;
@@ -38,20 +38,62 @@
 }
     
 .portfolioItem a {
-    background: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    opacity: 0;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+}
+
+.portfolioItem a:first-of-type {
+    margin-bottom: 1rem;
 }
 
 .portfolioItemInfo {
-    background: rgba(78,123,135,1);
+    background: $brandAccent;
     padding: 1.2rem;
     width: 100%;
     transition: opacity 0.2s ease-in-out;
+    display: flex;
+    justify-content: space-between;
+}
+
+.portfolioItemInfo .linkButton { 
+    margin: 0;
+    padding: 0 2rem;
+    height: 2.5rem;
+    color: $fontColourLight;
+    background: $brandAccentDark;
+}
+
+.portfolioItemInfo .linkButton i {
+    font-size: 1.8rem;
+}
+
+.portfolioItemInfo .linkButton:hover {
+    background: lighten($brandAccentDark, 4);
+}
+
+.portfolioItemInfo h3, .portfolioItemInfo h4 {
+    margin: 0;
+    color: $fontColourLight;
+}
+
+.portfolioItemInfo h4 {
+    font-weight: 100;
+}
+
+.portfolioButtons {
+    width: 100px;
+}
+
+.infoWrapper, .portfolioButtons {
+    display: flex;
+    flex-direction: column;
+}
+
+.portfolioItemInfo .h3Wrapper h3 {
+    margin-top: 0;
 }
 
 .portfolioItem:hover, .portfolioItem:focus {
