disabled hover easter egg

--- a/src/assets/styles/partials/_about.scss
+++ b/src/assets/styles/partials/_about.scss
@@ -32,10 +32,10 @@
     background-size: cover;
 }
 
-.secret:hover + .me {
-    background: url('../images/me2.jpg');
-    background-size: cover;
-}
+// .secret:hover + .me {
+//     background: url('../images/me2.jpg');
+//     background-size: cover;
+// }
 
 .secret {
     width: 75px;
